--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -2,37 +2,35 @@
 title: "Analysis"
 output: html_document
 ---
+#Install RStudio
+https://www.rstudio.com/products/rstudio/download/
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
-##Install ChAMP
+#Install ChAMP
 ```{r Install ChAMP}
 source("http://bioconductor.org/biocLite.R") 
 biocLite("ChAMP")
 library(ChAMP)
 ```
 
-##Data Loading
+#Data Loading
 ```{r Data loading}
 myLoad <- champ.load() #load dataset using samplesheet.csv
 ```
 
-##Normalization and Batch correction
+#Normalization and Batch correction
 ```{r Normalization & Batch correction}
 myNorm <- champ.norm() #beta values normalized with BMIQ method
 champ.SVD() #SVD analysis
 myNorm <- champ.runCombat(beta=myNorm,pd=myLoad$pd,batchname=c("Slide")) #batch correction
 ```
 
-##saving dataframe objects
+#Saving dataframe objects
 ```{r saving dataframe objects}
 limma <- champ.DMP(adjPVal = 1)  #No filtration
 df <- limma[[1]]  #statistic data
 ```
 
-##Combine beta values and static data
+#Combine beta values and static data
 ```{r Combine beta values and static data}
 df$CHR <- factor(df$CHR, levels=c("1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","X","Y"))
 df.probesort <- df[order(rownames(df)),]
